Fixing deprecation warnings on Java 9